input stream changes